--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:ProjektProgramowanie"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="MenuButton.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
