--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -59,7 +59,14 @@
                              FontSize="20"
                              Style="{StaticResource MenuButtonTheme}"/>
             </StackPanel>
-            
+
+            <TextBlock
+                       Width="250"
+                       Height="40"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Left"
+                       Margin="5"
+                       Grid.Column="1"/>
         </Grid>
     </Border>
 </Window>
